alignment issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 #home,#about,#events,#team{
   width: 100vw;
   padding: 1rem;
+
 }
 #about,#team,#events{
   height: max-content;
@@ -14,7 +15,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: -1;
+  /* z-index: -1; */
   
 }
 p{
